flink silver identiry